Change position of footer to absolute, to ensure that it stays at the bottom of the page, even when there is no content on the page. Add 200px margin below 'content' section to ensure that content is not covered by footer.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,13 +24,16 @@ html
 
  .content {
     flex: 1;
+    margin-bottom: 200px;
 }
 
 #footer {
    left:0px;
-   bottom:0px;
-   position: relative;
+   right: 0px;
+   bottom: 0%;
+   position: absolute;
 }
+
 
 .search-card {
     border-radius: 25px;
